--- a/lcfserver-core/pom.xml
+++ b/lcfserver-core/pom.xml
@@ -21,4 +21,18 @@
     <version>0.7-SNAPSHOT</version>
   </parent>
   <artifactId>lcfserver-core</artifactId>
+  
+  <dependencies>
+    <dependency>
+      <groupId>org.bic.ns.lcf</groupId>
+      <artifactId>lcf-schema</artifactId>
+      <version>${lcf.schema.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.ceridwen.util</groupId>
+      <artifactId>ceridwen-util</artifactId>
+      <version>1.7-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
+
 </project>
