--- a/lcfserver-backend-hashmap/pom.xml
+++ b/lcfserver-backend-hashmap/pom.xml
@@ -21,4 +21,13 @@
     <version>0.7-SNAPSHOT</version>
   </parent>
   <artifactId>lcfserver-backend-hashmap</artifactId>
+  
+  <dependencies>
+    <dependency>
+      <groupId>${project.parent.groupId}</groupId>
+      <artifactId>lcfserver-core</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+  </dependencies>
+  
 </project>
