--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,9 @@ The Library Communications Framework (LCF) is a set of library interoperability 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.build.timestamp.format>EEE, d MMMM, yyyy - HH:mm:ss zzz</maven.build.timestamp.format>
     <lcf.schema.version>1.0.1-SNAPSHOT</lcf.schema.version>
+    <lcfserver.backend.groupId>${project.groupId}</lcfserver.backend.groupId>
+    <lcfserver.backend.artifactId>lcfserver-backend-hashmap</lcfserver.backend.artifactId>
+    <lcfserver.backend.version>${project.version}</lcfserver.backend.version> 
   </properties>
 
   <repositories>
