--- a/lcfserver-frontend-restlet-cli/pom.xml
+++ b/lcfserver-frontend-restlet-cli/pom.xml
@@ -21,4 +21,47 @@
     <version>0.7-SNAPSHOT</version>
   </parent>
   <artifactId>lcfserver-frontend-restlet-cli</artifactId>
+  
+  <dependencies>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>${project.parent.groupId}</groupId>
+      <artifactId>lcfserver-frontend-restlet-core</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>${lcfserver.backend.groupId}</groupId>
+      <artifactId>${lcfserver.backend.artifactId}</artifactId>
+      <version>${lcfserver.backend.version}</version>
+    </dependency>
+  </dependencies>
+ 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>com.ceridwen.lcf.server.frontend.restlet.StandaloneServer</mainClass>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>  
+  
 </project>
