--- a/lcfserver-frontend-restlet-webapp/pom.xml
+++ b/lcfserver-frontend-restlet-webapp/pom.xml
@@ -22,4 +22,28 @@
   </parent>
   <artifactId>lcfserver-frontend-restlet-webapp</artifactId>
   <packaging>war</packaging>
+  
+  <dependencies>
+    <dependency>
+      <groupId>${project.parent.groupId}</groupId>
+      <artifactId>lcfserver-frontend-restlet-core</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.restlet.jee</groupId>
+      <artifactId>org.restlet.ext.servlet</artifactId>
+      <version>${restlet-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>${lcfserver.backend.groupId}</groupId>
+      <artifactId>${lcfserver.backend.artifactId}</artifactId>
+      <version>${lcfserver.backend.version}</version>
+    </dependency>   
+  </dependencies>
+
 </project>
