--- a/lcfserver-frontend-jaxrs-webapp/pom.xml
+++ b/lcfserver-frontend-jaxrs-webapp/pom.xml
@@ -22,4 +22,23 @@
   </parent>
   <artifactId>lcfserver-frontend-jaxrs-webapp</artifactId>
   <packaging>war</packaging>
+  
+  <dependencies>
+    <dependency>
+      <groupId>${project.parent.groupId}</groupId>
+      <artifactId>lcfserver-core</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
+      <version>2.0.1</version>
+    </dependency>  
+    <dependency>
+      <groupId>${lcfserver.backend.groupId}</groupId>
+      <artifactId>${lcfserver.backend.artifactId}</artifactId>
+      <version>${lcfserver.backend.version}</version>
+    </dependency>
+  </dependencies>
+  
 </project>
