updating poms for branch'release/lcfserver-0.7' with non-snapshot versions

--- a/lcfserver-assembly/pom.xml
+++ b/lcfserver-assembly/pom.xml
@@ -26,7 +26,7 @@
   <parent>
     <groupId>com.ceridwen.lcf.server</groupId>
     <artifactId>lcfserver</artifactId>
-    <version>0.7-SNAPSHOT</version>
+    <version>0.7</version>
   </parent>
   <artifactId>lcfserver-assembly</artifactId>
   <packaging>pom</packaging>
