--- a/lcfserver-frontend-restlet-cli/pom.xml
+++ b/lcfserver-frontend-restlet-cli/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>com.ceridwen.lcf.server</groupId>
     <artifactId>lcfserver</artifactId>
-    <version>0.7</version>
+    <version>0.8-SNAPSHOT</version>
   </parent>
   <artifactId>lcfserver-frontend-restlet-cli</artifactId>
   
