--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,14 @@ The Library Communications Framework (LCF) is a set of library interoperability 
           <artifactId>versions-maven-plugin</artifactId>
           <version>2.2</version>
         </plugin>
+        <plugin>
+          <groupId>org.eclipse.jetty</groupId>
+          <artifactId>jetty-maven-plugin</artifactId>
+          <version>9.3.7.v20160115</version>
+          <configuration>
+              <skip>true</skip>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
