Add restlet module loading to mvn command line

--- a/lcfserver-frontend-restlet-webapp/pom.xml
+++ b/lcfserver-frontend-restlet-webapp/pom.xml
@@ -48,6 +48,7 @@
 
   <profiles>
     <profile>
+      <id>lcf.server.frontend.restlet</id>
       <activation>
         <property>
           <name>lcf.server.frontend</name>
@@ -65,6 +66,36 @@
           </plugin>
         </plugins>
       </build>
+    </profile>    
+    <profile>
+      <id>lcf.server.frontend.restlet.module.raml</id>
+      <activation>
+        <property>
+          <name>lcf.server.frontend.restlet.module.raml</name>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>${project.parent.groupId}</groupId>
+          <artifactId>lcfserver-frontend-restlet-module-raml</artifactId>
+          <version>${project.parent.version}</version>
+        </dependency>   
+      </dependencies>
+    </profile>    
+    <profile>
+      <id>lcf.server.frontend.restlet.module.swagger</id>
+      <activation>
+        <property>
+          <name>lcf.server.frontend.restlet.module.swagger</name>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>${project.parent.groupId}</groupId>
+          <artifactId>lcfserver-frontend-restlet-module-swagger</artifactId>
+          <version>${project.parent.version}</version>
+        </dependency>   
+      </dependencies>
     </profile>    
   </profiles>
 
