Add jetty:run to jaxrs pom.xml Add optional module loading to restlet-cli pom.xml

--- a/lcfserver-frontend-jaxrs-webapp/pom.xml
+++ b/lcfserver-frontend-jaxrs-webapp/pom.xml
@@ -41,4 +41,26 @@
     </dependency>
   </dependencies>
   
+  <profiles>
+    <profile>
+      <activation>
+        <property>
+          <name>lcf.server.frontend</name>
+          <value>jaxrs</value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-maven-plugin</artifactId>
+            <configuration>
+              <skip>false</skip>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>    
+  </profiles>
+  
 </project>
