--- a/lcfserver-assembly/pom.xml
+++ b/lcfserver-assembly/pom.xml
@@ -26,7 +26,7 @@
   <parent>
     <groupId>com.ceridwen.lcf.server</groupId>
     <artifactId>lcfserver</artifactId>
-    <version>0.8-SNAPSHOT</version>
+    <version>0.8-jax-rs-refactor-SNAPSHOT</version>
   </parent>
   <artifactId>lcfserver-assembly</artifactId>
   <packaging>pom</packaging>
