--- a/pom.xml
+++ b/pom.xml
@@ -1,267 +1,85 @@
-<!--
-  Copyright 2016 Matthew J. Dovey (www.ceridwen.com)
-
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.ceridwen.lcf.server</groupId>
-  <artifactId>lcfserver</artifactId>
-  <version>0.8-jax-rs-refactor-SNAPSHOT</version>
-  <packaging>pom</packaging>
+    <groupId>com.ceridwen.lcf</groupId>
+    <artifactId>lcfserver</artifactId>
+    <version>1.1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
-  <name>lcfserver</name>
-  <description>
-This is a java reference server implementation of the Library Communication Framework.
-The Library Communications Framework (LCF) is a set of library interoperability standards which defines a framework for the communication of data between self-service and other library terminal applications to and from library management systems.</description>
-  <inceptionYear>2016</inceptionYear>
-  <url>https://software.ceridwen.com/redmine/projects/lcfserver</url>
-  <organization>
-    <name>Ceridwen Limited</name>
-    <url>http://www.ceridwen.com</url>
-  </organization>
+    <name>lcfserver</name>
 
-  <licenses>
-    <license>
-      <name>Apache License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
+    <properties>
+        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.compiler.source>12</java.compiler.source>
+        <java.compiler.target>12</java.compiler.target>
+        <lcf.schema.version>1.1.0</lcf.schema.version>
+        <java.ee.version>7.0</java.ee.version>
+    </properties>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.bic.ns.lcf</groupId>
+            <artifactId>lcf-schema</artifactId>
+            <version>${lcf.schema.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>${java.ee.version}</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
-  <issueManagement>
-    <system>Redmine</system>
-    <url>https://software.ceridwen.com/redmine/projects/lcfserver/issues</url>
-  </issueManagement>
-
-  <scm>
-    <url>https://software.ceridwen.com/redmine/projects/lcfserver/repository</url>
-    <connection>scm:git:https://software.ceridwen.com/redmine/lcfserver.git</connection>
-    <tag>HEAD</tag>
-  </scm>
-
-  <properties>
-    <project.scm.id>git</project.scm.id>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.build.timestamp.format>EEE, d MMMM, yyyy - HH:mm:ss zzz</maven.build.timestamp.format>
-    <lcf.schema.version>1.1.0</lcf.schema.version>
-    <lcfserver.backend.groupId>${project.groupId}</lcfserver.backend.groupId>
-    <lcfserver.backend.artifactId>lcfserver-backend-hashmap</lcfserver.backend.artifactId>
-    <lcfserver.backend.version>${project.version}</lcfserver.backend.version> 
-    <restlet-version>2.3.7</restlet-version>    
-  </properties>
-
-  <repositories>
-    <repository>
-      <id>ceridwen-libs-release</id>
-      <name>Ceridwen Release Repository</name>
-      <url>https://software.ceridwen.com/artifactory/libs-release</url>
-    </repository>
-    <repository>
-      <id>ceridwen-libs-snapshot</id>
-      <name>Ceridwen Snapshot Repository</name>
-      <url>https://software.ceridwen.com/artifactory/libs-snapshot</url>
-    </repository>
-    <repository>
-      <id>maven-restlet</id>
-      <name>Restlet repository</name>
-      <url>https://maven.restlet.com</url>
-    </repository>
-  </repositories>
-  
-  <pluginRepositories>
-    <pluginRepository>
-      <id>ceridwen-plugins-release</id>
-      <name>Ceridwen Release Plugin Repository</name>
-      <url>https://software.ceridwen.com/artifactory/plugins-release</url>
-    </pluginRepository>
-    <pluginRepository>
-      <id>ceridwen-plugins-snapshot</id>
-      <name>Ceridwen Snapshot Plugin Repository</name>
-      <url>https://software.ceridwen.com/artifactory/plugins-snapshot</url>
-    </pluginRepository>
-  </pluginRepositories>
-
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-
-  <prerequisites>
-    <maven>3.3</maven>
-  </prerequisites> 
-  
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.5.1</version>
-          <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>2.7</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.19.1</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>2.6</version>
-          <configuration>
-            <archive>
-              <manifest>
-                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-              </manifest>
-              <manifestEntries>
-                <Built-By>${user.name}</Built-By>
-                <Build-Date>${maven.build.timestamp}</Build-Date>
-              </manifestEntries>
-            </archive>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-shade-plugin</artifactId>
-          <version>2.4.3</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-war-plugin</artifactId>
-          <version>2.6</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.10.3</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-source-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-assembly-plugin</artifactId>
-          <version>2.6</version>
-          <executions>
-            <execution>
-              <id>distro-assembly</id>
-              <phase>package</phase>
-              <goals>
-                <goal>single</goal>
-              </goals>
-              <configuration>
-                <descriptors>
-                  <descriptor>src/assembly/bin.xml</descriptor>
-                </descriptors>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-release-plugin</artifactId>
-          <version>2.5.3</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.5</version>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>versions-maven-plugin</artifactId>
-          <version>2.2</version>
-        </plugin>
-        <plugin>
-          <groupId>org.eclipse.jetty</groupId>
-          <artifactId>jetty-maven-plugin</artifactId>
-          <version>9.3.7.v20160115</version>
-          <configuration>
-              <skip>true</skip>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-    <plugins>
-      <plugin>
-        <groupId>com.amashchenko.maven.plugin</groupId>
-        <artifactId>gitflow-maven-plugin</artifactId>
-        <version>1.12.0</version>
-        <configuration>
-            <installProject>false</installProject>
-            <verbose>false</verbose>
-            <gitFlowConfig>
-                <productionBranch>master</productionBranch>
-                <developmentBranch>develop</developmentBranch>
-                <featureBranchPrefix>feature/</featureBranchPrefix>
-                <releaseBranchPrefix>release/${project.artifactId}-</releaseBranchPrefix>
-                <hotfixBranchPrefix>hotfix/${project.artifactId}-</hotfixBranchPrefix>
-                <supportBranchPrefix>support//${project.artifactId}-</supportBranchPrefix>
-                <versionTagPrefix>version/${project.artifactId}-</versionTagPrefix>
-                <origin>origin</origin>
-            </gitFlowConfig>            
-          <allowSnapshots>true</allowSnapshots>
-          <keepBranch>true</keepBranch>
-          <noDeploy>true</noDeploy>
-          <suppressFastForward>true</suppressFastForward>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
-  <modules>
-    <module>lcfserver-core</module>
-    <module>lcfserver-backend-hashmap</module>
-    <module>lcfserver-frontend-restlet-core</module>
-    <module>lcfserver-frontend-restlet-cli</module>
-    <module>lcfserver-frontend-restlet-webapp</module>
-    <module>lcfserver-frontend-restlet-module-raml</module>
-    <module>lcfserver-frontend-restlet-module-swagger</module>
-    <module>lcfserver-frontend-servlet-webapp</module>
-    <module>lcfserver-frontend-jaxrs-webapp</module>
-    <module>lcfserver-assembly</module>
-  </modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>${java.compiler.source}</source>
+                    <target>${java.compiler.target}</target>
+                    <compilerArguments>
+                        <endorseddirs>${endorsed.dir}</endorseddirs>
+                    </compilerArguments>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.6</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${endorsed.dir}</outputDirectory>
+                            <silent>true</silent>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>javax</groupId>
+                                    <artifactId>javaee-endorsed-api</artifactId>
+                                    <version>7.0</version>
+                                    <type>jar</type>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
