--- a/lcfserver-resources-memory/pom.xml
+++ b/lcfserver-resources-memory/pom.xml
@@ -21,27 +21,35 @@
     <version>1.1.0-SNAPSHOT</version>
   </parent>
   
-  <artifactId>lcfserver-resources</artifactId>
+  <artifactId>lcfserver-resources-memory</artifactId>
   <packaging>jar</packaging>
-    <dependencies>
-        <dependency>
-            <groupId>org.bic.ns.lcf</groupId>
-            <artifactId>lcf-schema</artifactId>
-            <version>1.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>lcfserver-model</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>lcfserver-codegen</artifactId>
-            <version>${project.version}</version>
-            <scope>compile</scope>
-        </dependency>
-    </dependencies>
 
+  
+   <dependencies>
+      <dependency>
+         <groupId>${project.groupId}</groupId>
+         <artifactId>lcfserver-resources</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.bic.ns.lcf</groupId>
+         <artifactId>lcf-schema</artifactId>
+         <version>1.1.0</version>
+      </dependency>
+      <dependency>
+         <groupId>${project.groupId}</groupId>
+         <artifactId>lcfserver-model</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>${project.groupId}</groupId>
+         <artifactId>lcfserver-codegen</artifactId>
+         <version>${project.version}</version>
+         <scope>compile</scope>
+      </dependency>
+   </dependencies>
+    <name>lcfserver-resources-memory</name>
+    
   <build>
     <plugins>
       <plugin>
@@ -57,7 +65,7 @@
           </execution>
         </executions>
         <configuration>
-          <mainClass>com.ceridwen.lcf.server.codegen.GenerateResourceManagers</mainClass>
+          <mainClass>com.ceridwen.lcf.server.codegen.GenerateMemoryResourceManagers</mainClass>
           <arguments>
             <argument>${basedir}/src/main/string-template</argument>
             <argument>${basedir}/target/generated-sources/string-template</argument>
@@ -67,6 +75,16 @@
         </configuration>
       </plugin>
     </plugins>
-  </build>
+    
+       <resources>
+            <resource>
+                <directory>target/generated-sources/string-template/META-INF/services</directory>
+                <targetPath>META-INF/services</targetPath>
+            </resource> 
+        </resources>
 
+    
+    
+  </build>    
+    
 </project>
