--- a/lcfserver-server/pom.xml
+++ b/lcfserver-server/pom.xml
@@ -58,6 +58,16 @@
          <version>${project.version}</version>
       </dependency>
       <dependency>
+         <groupId>javax.activation</groupId>
+         <artifactId>activation</artifactId>
+         <version>1.1.1</version>
+      </dependency>
+      <dependency>
+         <groupId>org.glassfish.jersey.inject</groupId>
+         <artifactId>jersey-hk2</artifactId>
+         <version>2.28</version>
+      </dependency>
+      <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>${java.ee.version}</version>
@@ -88,7 +98,42 @@
             <artifactId>jackson-jaxrs-json-provider</artifactId>
             <version>2.9.8</version>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-jetty-http</artifactId>
+            <version>2.28</version>
+        </dependency>    
+        
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-util</artifactId>
+            <version>9.4.17.v20190418</version>
+        </dependency>        
+        
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-server</artifactId>
+            <version>2.28</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet-core</artifactId>
+            <version>2.28</version>
+        </dependency>        
+        
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlet</artifactId>
+            <version>9.4.9.v20180320</version>
+        </dependency>        
+        
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>9.4.7.RC0</version>
+        </dependency> 
+   </dependencies>
 
   <build>
     <plugins>
@@ -114,6 +159,13 @@
           <classpathScope>compile</classpathScope>
         </configuration>
       </plugin>
+        <plugin>
+          <groupId>org.eclipse.jetty</groupId>
+          <artifactId>jetty-maven-plugin</artifactId>
+          <configuration>
+            <skip>false</skip>
+          </configuration>
+    </plugin>
     </plugins>
   </build>
 
