--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,19 @@
     </modules>
     
     <build>
+        <pluginManagement>
+        <plugins>
+        <plugin>
+          <groupId>org.eclipse.jetty</groupId>
+          <artifactId>jetty-maven-plugin</artifactId>
+          <version>9.4.18.v20190429</version>
+          <configuration>
+              <skip>true</skip>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+            
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -118,7 +131,14 @@
                     <basedir>${project.build.directory}/derby</basedir>
                     <port>1527</port>
                 </configuration>
-            </plugin>            
+            </plugin>  
+          <plugin>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-maven-plugin</artifactId>
+            <configuration>
+              <skip>false</skip>
+            </configuration>
+          </plugin>
         </plugins>
     </build>
 
